--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, "Categories" %>
 
-<h1>Categories</h1>
+<h1 class="mt-3">Categories</h1>
 <hr>
 
-<div class="card-body mt-3">
+<div class="card-body mt-3 popUp">
   <table class="table table-bordered table-hover text-center">
     <thead class="table-dark">
       <tr>
@@ -14,7 +14,7 @@
     <tbody>
       <% @categories.each do |category| %>
         <tr>
-          <td scope="row"><strong><%= category.name %></strong></td>
+          <td scope="row"><strong class="fs-5"><%= category.name %></strong></td>
           <td>
 
             <%= link_to edit_category_path(category), class: 'btn bg-gradient bg-primary text-light' do %>
